--- a/main.html
+++ b/main.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-
-<html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
 </head>
-
+<title>"Why I want to become a developer?</title>
 <body>
-<h1>"Why I want to become a developer?"</h1>
-	<p>The answer to the question should be wrapped in a paragraph tag. The text content must have a length greater than </p>
+<h1>Why I want to become a developer</h1>
+	<p> I want to become a software developer because I enjoy solving problems and building tools that can help people in their everyday lives. 
+        Technology is constantly evolving, and being a developer allows me to keep learning new things while creating innovative solutions. 
+        The creativity, challenge, and opportunity to make a real impact in the world through code motivate me every day to improve my skills 
+        and grow in this field.</p>
 </body>
 
 </html>
